   * New portraits: Inferno Drake
   * Terrain:
     * Tropical Ocean added
     * Improved transition between void and off-map and with both and the oceans.
     * Snowy Human City Village added
 * Multiplayer:
   * Side vision is now switched before the healing phase of the turn (only visible in hotseat)
 * Units
   * Added the Ghast unit from DiD to core with new base frame and animations.
 * WML Engine:
   * Added a LOW_MEM define to WML to be able to adapt WML to low memory builds.
   * Added event: side turn X
   * Added event: turn X refresh
   * Added [chat] tag for outputting public or private messages to the chat.
   * Added events: turn end and turn X end_text
   * Added events: side turn end, side X turn end, side turn X end, 
     and side X turn Y end
 * Terrain WML:
   * Updated height adjust of desert, orcish, and snowy keeps.
 * Miscellaneous and bug fixes:
   * Removed: statistics upload code.
   * Changed: compiler mode set to c++98

Version 1.9.0:
 * AI:
   * Fixed bug #15994 : Formula AI candidate actions specified in [side][ai]
     don't always work.
   * Fixed bug #16406: Broken AI of SoF 1, and improved upgrade procedure for
     old-style AI config.
 * Campaigns:
   * An Orcish Incursion:
     * Made 'Valley of Trolls' easier on the easiest difficulties.
   * Dead Water:
     * New campaign added to mainline from the Wesnoth-UMC-Dev Project's
       repository (Intermediate level, 13 scenarios)
   * Descent into Darkness:
     * 'A Small Favor' (part 1) now gives an early finish bonus.
     * Dela is no longer invulnerable in 'Alone at Last' but cannot be safely
       assassinated.
   * Eastern Invasion:
     * New (unanimated) sprites for Owaec.
     * Made it slightly easier to rescue the knights in 'Mal-Ravanal's Capital'.
     * Increased the turn limit in 'Two Paths' from 18/16/14 to 18/17/16.
   * Heir to the Throne:
     * Made 'Cliffs of Thoria' much easier.
     * Made 'Isle of the Damned' slightly easier.
   * Liberty: