@@ -17,6 +17,8 @@ Version 1.9.0+svn:
    * Side vision is now switched before the healing phase of the turn (only visible in hotseat)
  * Units
    * Added the Ghast unit from DiD to core with new base frame and animations.
+ * User interface:
+   * Changed: the title screen is now gui2.
  * WML Engine:
    * Added a LOW_MEM define to WML to be able to adapt WML to low memory builds.
    * Added event: side turn X
